[gd_scene load_steps=6 format=4 uid="uid://becsgo1mcxib0"]

[ext_resource type="Script" path="res://scripts/panel_mejoras.gd" id="1_3m34x"]
[ext_resource type="TileSet" uid="uid://tr1qsvw38yju" path="res://tiles/tileset_paneles_mejoras.tres" id="2_lu0mq"]
[ext_resource type="FontFile" uid="uid://bfdlmvbyp8yqh" path="res://fonts/EquipmentPro.otf" id="3_v2mdd"]
[ext_resource type="FontFile" uid="uid://ba61w4ocvfhxb" path="res://fonts/ExpressionPro.otf" id="5_j51aj"]
[ext_resource type="Texture2D" uid="uid://cdcaoy2mayr4m" path="res://img/PinguinoReal.png" id="6_wayin"]

[node name="PanelMejoras" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_3m34x")

[node name="Fondo" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAD6//L/AAAAAAIAAAAFAPL/AAACAAIAAAAFAA0AAAACAAQAAAD6/w0AAAAAAAQAAAD6/wwAAAAAAAMAAAD6/wsAAAAAAAMAAAD6/woAAAAAAAMAAAD6/wkAAAAAAAMAAAD6/wgAAAAAAAMAAAD6/wcAAAAAAAMAAAD6/wYAAAAAAAMAAAD6/wUAAAAAAAMAAAD6/wQAAAAAAAMAAAD6/wMAAAAAAAMAAAD6/wIAAAAAAAMAAAD6/wEAAAAAAAMAAAD6/wAAAAAAAAMAAAD6////AAAAAAMAAAD6//7/AAAAAAMAAAD6//3/AAAAAAMAAAD6//z/AAAAAAMAAAD6//v/AAAAAAMAAAD6//r/AAAAAAMAAAD6//n/AAAAAAMAAAD6//j/AAAAAAMAAAD6//f/AAAAAAMAAAD6//b/AAAAAAMAAAD6//X/AAAAAAMAAAD6//T/AAAAAAMAAAD6//P/AAAAAAMAAAAEAPL/AAABAAIAAAADAPL/AAABAAIAAAACAPL/AAABAAIAAAABAPL/AAABAAIAAAAAAPL/AAABAAIAAAD///L/AAABAAIAAAD+//L/AAABAAIAAAD9//L/AAABAAIAAAD8//L/AAABAAIAAAD7//L/AAABAAIAAAAFAPP/AAACAAMAAAAFAPT/AAACAAMAAAAFAPX/AAACAAMAAAAFAPb/AAACAAMAAAAFAPf/AAACAAMAAAAFAPj/AAACAAMAAAAFAPn/AAACAAMAAAAFAPr/AAACAAMAAAAFAPv/AAACAAMAAAAFAPz/AAACAAMAAAAFAP3/AAACAAMAAAAFAP7/AAACAAMAAAAFAP//AAACAAMAAAAFAAAAAAACAAMAAAAFAAEAAAACAAMAAAAFAAIAAAACAAMAAAAFAAMAAAACAAMAAAAFAAQAAAACAAMAAAAFAAUAAAACAAMAAAAFAAYAAAACAAMAAAAFAAcAAAACAAMAAAAFAAgAAAACAAMAAAAFAAkAAAACAAMAAAAFAAoAAAACAAMAAAAFAAsAAAACAAMAAAAFAAwAAAACAAMAAAAEAA0AAAABAAQAAAADAA0AAAABAAQAAAACAA0AAAABAAQAAAABAA0AAAABAAQAAAAAAA0AAAABAAQAAAD//w0AAAABAAQAAAD+/w0AAAABAAQAAAD9/w0AAAABAAQAAAD8/w0AAAABAAQAAAD7/w0AAAABAAQAAAD8/wsAAAABAAMAAAD8/woAAAABAAMAAAD8/wkAAAABAAMAAAD8/wgAAAABAAMAAAD8/wcAAAABAAMAAAD8/wYAAAABAAMAAAD8/wUAAAABAAMAAAD8/wQAAAABAAMAAAD8/wMAAAABAAMAAAD8/wIAAAABAAMAAAD8/wEAAAABAAMAAAD8/wAAAAABAAMAAAD8////AAABAAMAAAD8//7/AAABAAMAAAD8//3/AAABAAMAAAD8//z/AAABAAMAAAD8//v/AAABAAMAAAD8//r/AAABAAMAAAD8//n/AAABAAMAAAD8//j/AAABAAMAAAD8//f/AAABAAMAAAD8//b/AAABAAMAAAD8//X/AAABAAMAAAD8//T/AAABAAMAAAD8//P/AAABAAMAAAD7//P/AgAiABEAAAD7//T/AAABAAMAAAD7//X/AAABAAMAAAD7//b/AAABAAMAAAD7//f/AAABAAMAAAD7//j/AAABAAMAAAD7//n/AAABAAMAAAD7//r/AAABAAMAAAD7//v/AAABAAMAAAD7//z/AAABAAMAAAD7//3/AAABAAMAAAD7//7/AAABAAMAAAD7////AAABAAMAAAD7/wAAAAABAAMAAAD7/wEAAAABAAMAAAD7/wIAAAABAAMAAAD7/wMAAAABAAMAAAD7/wQAAAABAAMAAAD7/wUAAAABAAMAAAD7/wYAAAABAAMAAAD7/wcAAAABAAMAAAD7/wgAAAABAAMAAAD7/wkAAAABAAMAAAD7/woAAAABAAMAAAD7/wsAAAABAAMAAAD7/wwAAAABAAMAAAD8/wwAAAABAAMAAAD9/wwAAAABAAMAAAD9/wsAAAABAAMAAAD9/woAAAABAAMAAAD9/wkAAAABAAMAAAD9/wgAAAABAAMAAAD9/wcAAAABAAMAAAD9/wYAAAABAAMAAAD9/wUAAAABAAMAAAD9/wQAAAABAAMAAAD9/wMAAAABAAMAAAD9/wIAAAABAAMAAAD9/wEAAAABAAMAAAD9/wAAAAABAAMAAAD9////AAABAAMAAAD9//7/AAABAAMAAAD9//3/AAABAAMAAAD9//z/AAABAAMAAAD9//v/AAABAAMAAAD9//r/AAABAAMAAAD9//n/AAABAAMAAAD9//j/AAABAAMAAAD9//f/AAABAAMAAAD9//b/AAABAAMAAAD9//X/AAABAAMAAAD9//T/AAABAAMAAAD9//P/AAABAAMAAAD+//P/AAABAAMAAAD+//T/AAABAAMAAAD+//X/AAABAAMAAAD+//b/AAABAAMAAAD+//f/AAABAAMAAAD+//j/AAABAAMAAAD+//n/AAABAAMAAAD+//r/AAABAAMAAAD+//v/AAABAAMAAAD+//z/AAABAAMAAAD+//3/AAABAAMAAAD+//7/AAABAAMAAAD+////AAABAAMAAAD+/wAAAAABAAMAAAD+/wEAAAABAAMAAAD+/wIAAAABAAMAAAD+/wMAAAABAAMAAAD+/wQAAAABAAMAAAD+/wUAAAABAAMAAAD+/wYAAAABAAMAAAD+/wcAAAABAAMAAAD+/wgAAAABAAMAAAD+/wkAAAABAAMAAAD+/woAAAABAAMAAAD+/wsAAAABAAMAAAD+/wwAAAABAAMAAAD//wwAAAABAAMAAAD//wsAAAABAAMAAAD//woAAAABAAMAAAD//wkAAAABAAMAAAD//wgAAAABAAMAAAD//wcAAAABAAMAAAD//wYAAAABAAMAAAD//wUAAAABAAMAAAD//wQAAAABAAMAAAD//wMAAAABAAMAAAD//wIAAAABAAMAAAD//wEAAAABAAMAAAD//wAAAAABAAMAAAD/////AAABAAMAAAD///7/AAABAAMAAAD///3/AAABAAMAAAD///z/AAABAAMAAAD///v/AAABAAMAAAD///r/AAABAAMAAAD///n/AAABAAMAAAD///j/AAABAAMAAAD///f/AAABAAMAAAD///b/AAABAAMAAAD///X/AAABAAMAAAD///T/AAABAAMAAAD///P/AAABAAMAAAAAAPP/AAABAAMAAAAAAPT/AAABAAMAAAAAAPX/AAABAAMAAAAAAPb/AAABAAMAAAAAAPf/AAABAAMAAAAAAPj/AAABAAMAAAAAAPn/AAABAAMAAAAAAPr/AAABAAMAAAAAAPv/AAABAAMAAAAAAPz/AAABAAMAAAAAAP3/AAABAAMAAAAAAP7/AAABAAMAAAAAAP//AAABAAMAAAAAAAAAAAABAAMAAAAAAAEAAAABAAMAAAAAAAIAAAABAAMAAAAAAAMAAAABAAMAAAAAAAQAAAABAAMAAAAAAAUAAAABAAMAAAAAAAYAAAABAAMAAAAAAAcAAAABAAMAAAAAAAgAAAABAAMAAAAAAAkAAAABAAMAAAAAAAoAAAABAAMAAAAAAAsAAAABAAMAAAAAAAwAAAABAAMAAAABAAwAAAABAAMAAAABAAsAAAABAAMAAAABAAoAAAABAAMAAAABAAkAAAABAAMAAAABAAgAAAABAAMAAAABAAcAAAABAAMAAAABAAYAAAABAAMAAAABAAUAAAABAAMAAAABAAQAAAABAAMAAAABAAMAAAABAAMAAAABAAIAAAABAAMAAAABAAEAAAABAAMAAAABAAAAAAABAAMAAAABAP//AAABAAMAAAABAP7/AAABAAMAAAABAP3/AAABAAMAAAABAPz/AAABAAMAAAABAPv/AAABAAMAAAABAPr/AAABAAMAAAABAPn/AAABAAMAAAABAPj/AAABAAMAAAABAPf/AAABAAMAAAABAPb/AAABAAMAAAABAPX/AAABAAMAAAABAPT/AAABAAMAAAABAPP/AAABAAMAAAACAPP/AAABAAMAAAACAPT/AAABAAMAAAACAPX/AAABAAMAAAACAPb/AAABAAMAAAACAPf/AAABAAMAAAACAPj/AAABAAMAAAACAPn/AAABAAMAAAACAPr/AAABAAMAAAACAPv/AAABAAMAAAACAPz/AAABAAMAAAACAP3/AAABAAMAAAACAP7/AAABAAMAAAACAP//AAABAAMAAAACAAAAAAABAAMAAAACAAEAAAABAAMAAAACAAIAAAABAAMAAAACAAMAAAABAAMAAAACAAQAAAABAAMAAAACAAUAAAABAAMAAAACAAYAAAABAAMAAAACAAcAAAABAAMAAAACAAgAAAABAAMAAAACAAkAAAABAAMAAAACAAoAAAABAAMAAAACAAsAAAABAAMAAAACAAwAAAABAAMAAAADAAwAAAABAAMAAAADAAsAAAABAAMAAAADAAoAAAABAAMAAAADAAkAAAABAAMAAAADAAgAAAABAAMAAAADAAcAAAABAAMAAAADAAYAAAABAAMAAAADAAUAAAABAAMAAAADAAQAAAABAAMAAAADAAMAAAABAAMAAAADAAIAAAABAAMAAAADAAEAAAABAAMAAAADAAAAAAABAAMAAAADAP//AAABAAMAAAADAP7/AAABAAMAAAADAP3/AAABAAMAAAADAPz/AAABAAMAAAADAPv/AAABAAMAAAADAPr/AAABAAMAAAADAPn/AAABAAMAAAADAPj/AAABAAMAAAADAPf/AAABAAMAAAADAPb/AAABAAMAAAADAPX/AAABAAMAAAADAPT/AAABAAMAAAADAPP/AAABAAMAAAAEAPP/AgAiABEAAAAEAPT/AAABAAMAAAAEAPX/AAABAAMAAAAEAPb/AAABAAMAAAAEAPf/AAABAAMAAAAEAPj/AAABAAMAAAAEAPn/AAABAAMAAAAEAPr/AAABAAMAAAAEAPv/AAABAAMAAAAEAPz/AAABAAMAAAAEAP3/AAABAAMAAAAEAP7/AAABAAMAAAAEAP//AAABAAMAAAAEAAAAAAABAAMAAAAEAAEAAAABAAMAAAAEAAIAAAABAAMAAAAEAAMAAAABAAMAAAAEAAQAAAABAAMAAAAEAAUAAAABAAMAAAAEAAYAAAABAAMAAAAEAAcAAAABAAMAAAAEAAgAAAABAAMAAAAEAAkAAAABAAMAAAAEAAoAAAABAAMAAAAEAAsAAAABAAMAAAAEAAwAAAABAAMAAAA=")
tile_set = ExtResource("2_lu0mq")

[node name="Superior" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAD7//z/BQAOAAIAAAAEAPz/BQATAAIAAAD7//7/BQAOAAUAAAAEAP7/BQATAAUAAAAEAP3/BQATAAQAAAADAP7/BQARAAUAAAACAP7/BQARAAUAAAABAP7/BQARAAUAAAAAAP7/BQARAAUAAAD///7/BQARAAUAAAD+//7/BQARAAUAAAD9//7/BQARAAUAAAD8//7/BQARAAUAAAD7//3/BQAOAAQAAAADAPz/BQARAAIAAAACAPz/BQARAAIAAAABAPz/BQARAAIAAAAAAPz/BQARAAIAAAD///z/BQARAAIAAAD+//z/BQARAAIAAAD9//z/BQARAAIAAAD8//z/BQARAAIAAAADAP3/BQARAAQAAAACAP3/BQARAAQAAAABAP3/BQARAAQAAAAAAP3/BQARAAQAAAD///3/BQARAAQAAAD+//3/BQARAAQAAAD9//3/BQARAAQAAAD8//3/BQARAAQAAAAEAAAABQANAAIAAAD7/wAABQAIAAIAAAD7/wIABQAIAAUAAAAEAAIABQANAAUAAAAEAAEABQANAAQAAAD7/wEABQAIAAQAAAADAAIABQALAAUAAAACAAIABQALAAUAAAABAAIABQALAAUAAAAAAAIABQALAAUAAAD//wIABQALAAUAAAD+/wIABQALAAUAAAD8/wIABQALAAUAAAADAAAABQAKAAIAAAACAAAABQAKAAIAAAABAAAABQAKAAIAAAAAAAAABQAKAAIAAAD//wAABQAKAAIAAAD+/wAABQAKAAIAAAD8/wAABQAKAAIAAAADAAEABQALAAMAAAACAAEABQALAAMAAAABAAEABQALAAMAAAAAAAEABQALAAMAAAD//wEABQALAAMAAAD+/wEABQALAAMAAAD8/wEABQALAAMAAAD9/wIABQALAAUAAAD9/wEABQALAAMAAAD9/wAABQAKAAIAAAAEAAQABQAHAAIAAAD7/wQABQACAAIAAAD7/wYABQACAAUAAAAEAAYABQAHAAUAAAAEAAUABQAHAAQAAAD7/wUABQACAAQAAAADAAYABQAEAAUAAAACAAYABQAEAAUAAAABAAYABQAEAAUAAAAAAAYABQAEAAUAAAD//wYABQAEAAUAAAD+/wYABQAEAAUAAAD9/wYABQAEAAUAAAD8/wYABQAEAAUAAAADAAQABQAEAAIAAAACAAQABQAEAAIAAAABAAQABQAEAAIAAAAAAAQABQAEAAIAAAD//wQABQAEAAIAAAD+/wQABQAEAAIAAAD9/wQABQAEAAIAAAD8/wQABQAEAAIAAAADAAUABQAFAAQAAAACAAUABQAFAAQAAAABAAUABQAFAAQAAAAAAAUABQAFAAQAAAD//wUABQAFAAQAAAD+/wUABQAFAAQAAAD9/wUABQAFAAQAAAD8/wUABQAFAAQAAAAEAAgABQAKAA4AAAD7/wgABQAIAA4AAAD7/woABQAIABAAAAAEAAoABQAKABAAAAAEAAkABQAKAA8AAAD7/wkABQAIAA8AAAADAAoABQAJABAAAAACAAoABQAJABAAAAABAAoABQAJABAAAAAAAAoABQAJABAAAAD//woABQAJABAAAAD+/woABQAJABAAAAD9/woABQAJABAAAAD8/woABQAJABAAAAADAAgABQAJAA4AAAACAAgABQAJAA4AAAABAAgABQAJAA4AAAAAAAgABQAJAA4AAAD//wgABQAJAA4AAAD+/wgABQAJAA4AAAD9/wgABQAJAA4AAAD8/wgABQAJAA4AAAADAAkABQAJAA8AAAACAAkABQAJAA8AAAABAAkABQAJAA8AAAAAAAkABQAJAA8AAAD//wkABQAJAA8AAAD+/wkABQAJAA8AAAD9/wkABQAJAA8AAAD8/wkABQAJAA8AAAAEAPn/AgAcABEAAAAEAPr/AgAcABMAAAD7//r/AgAcABMAAAD7//n/AgAcABEAAAADAPn/AgAcABEAAAACAPn/AgAcABEAAAABAPn/AgAcABEAAAAAAPn/AgAcABEAAAD///n/AgAcABEAAAD+//n/AgAcABEAAAD9//n/AgAcABEAAAD8//n/AgAcABEAAAADAPr/AgAcABMAAAACAPr/AgAcABMAAAABAPr/AgAcABMAAAAAAPr/AgAcABMAAAD///r/AgAcABMAAAD+//r/AgAcABMAAAD9//r/AgAcABMAAAD8//r/AgAcABMAAAD7//T/AQAtAAEAAAD7//f/AQAtAAMAAAAEAPf/AQAvAAMAAAAEAPT/AQAvAAEAAAAEAPb/AQAvAAIAAAAEAPX/AQAvAAIAAAADAPf/AQAuAAMAAAACAPf/AQAuAAMAAAABAPf/AQAuAAMAAAAAAPf/AQAuAAMAAAD///f/AQAuAAMAAAD+//f/AQAuAAMAAAD9//f/AQAuAAMAAAD8//f/AQAuAAMAAAD7//X/AQAtAAIAAAD7//b/AQAtAAIAAAADAPT/AQAuAAEAAAACAPT/AQAuAAEAAAABAPT/AQAuAAEAAAAAAPT/AQAuAAEAAAD///T/AQAuAAEAAAD+//T/AQAuAAEAAAD9//T/AQAuAAEAAAD8//T/AQAuAAEAAAADAPb/AQAuAAIAAAACAPb/AQAuAAIAAAABAPb/AQAuAAIAAAAAAPb/AQAuAAIAAAD///b/AQAuAAIAAAD+//b/AQAuAAIAAAD9//b/AQAuAAIAAAD8//b/AQAuAAIAAAD8//X/AQAuAAIAAAD9//X/AQAuAAIAAAD+//X/AQAuAAIAAAD///X/AQAuAAIAAAAAAPX/AQAuAAIAAAABAPX/AQAuAAIAAAACAPX/AQAuAAIAAAADAPX/AQAuAAIAAAD7//P/AQAiAA0AAAAEAPP/AQAxAA4AAAAEAAwAAQALABEAAAABAAwAAQAKABEAAAADAAwAAQAKABAAAAACAAwAAQAKABAAAAD6//n/AgAbABEAAAD6//r/AgAbABMAAAAFAPn/AgAdABEAAAAFAPr/AgAdABMAAAA=")
tile_set = ExtResource("2_lu0mq")

[node name="SuperiorASuperior" type="TileMapLayer" parent="."]
position = Vector2(0, -10)
tile_map_data = PackedByteArray("AAD8//X/BAAEAFIAAAD8//b/BAAEAFMAAAD9//X/BAAFAFIAAAD9//b/BAAFAFMAAAACAPX/BAAMAFoAAAACAPb/BAAMAFsAAAADAPX/BAANAFoAAAADAPb/BAANAFsAAAA=")
tile_set = ExtResource("2_lu0mq")

[node name="SuperiorASuperiorSinMover" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAD8//z/AQAwAAEAAAD8//7/AQAwAAMAAAAAAPz/AQAyAAEAAAAAAP7/AQAyAAMAAAD///7/AQAxAAMAAAD+//7/AQAxAAMAAAD9//7/AQAxAAMAAAD8//3/AQAwAAIAAAAAAP3/AQAyAAIAAAD///z/AQAxAAEAAAD+//z/AQAxAAEAAAD9//z/AQAxAAEAAAD///3/AQAxAAIAAAD+//3/AQAxAAIAAAD9//3/AQAxAAIAAAD8/wEAAQAwAAIAAAD8/wAAAQAwAAEAAAD8/wQAAQAwAAEAAAD8/wgAAQAwAAEAAAD8/woAAQAwAAMAAAD8/wYAAQAwAAMAAAD8/wIAAQAwAAMAAAAAAAoAAQAyAAMAAAAAAAYAAQAyAAMAAAAAAAIAAQAyAAMAAAAAAAAAAQAyAAEAAAAAAAQAAQAyAAEAAAAAAAgAAQAyAAEAAAD8/wkAAQAwAAIAAAD8/wUAAQAwAAIAAAAAAAkAAQAyAAIAAAAAAAUAAQAyAAIAAAAAAAEAAQAyAAIAAAD//wAAAQAxAAEAAAD+/wAAAQAxAAEAAAD9/wAAAQAxAAEAAAD//wQAAQAxAAEAAAD+/wQAAQAxAAEAAAD9/wQAAQAxAAEAAAD//wgAAQAxAAEAAAD+/wgAAQAxAAEAAAD9/wgAAQAxAAEAAAD//woAAQAxAAMAAAD+/woAAQAxAAMAAAD9/woAAQAxAAMAAAD//wYAAQAxAAMAAAD+/wYAAQAxAAMAAAD9/wYAAQAxAAMAAAD//wIAAQAxAAMAAAD+/wIAAQAxAAMAAAD9/wIAAQAxAAMAAAD+/wEAAQAxAAIAAAD//wEAAQAxAAIAAAD9/wEAAQAxAAIAAAD//wUAAQAxAAIAAAD+/wUAAQAxAAIAAAD9/wUAAQAxAAIAAAD//wkAAQAxAAIAAAD+/wkAAQAxAAIAAAD9/wkAAQAxAAIAAAACAP3/AQASABEAAAADAP3/AQATABEAAAACAAEAAQASABEAAAADAAEAAQATABEAAAACAAUAAQASABEAAAADAAUAAQATABEAAAACAAkAAQASABEAAAADAAkAAQATABEAAAA=")
tile_set = ExtResource("2_lu0mq")

[node name="SuperiorASuperiorSinMoverNoPeces" type="TileMapLayer" parent="."]
visible = false
tile_map_data = PackedByteArray("AAACAAkAAQAKABEAAAADAAkAAQALABEAAAACAAUAAQAKABEAAAADAAUAAQALABEAAAACAAEAAQAKABEAAAADAAEAAQALABEAAAACAP3/AQAKABEAAAADAP3/AQALABEAAAA=")
tile_set = ExtResource("2_lu0mq")

[node name="SuperiorASuperiorASuperior" type="TileMapLayer" parent="."]
position = Vector2(8, 0)
tile_map_data = PackedByteArray("AAACAAkAAwAJADYAAAACAAUAAwAJADYAAAACAAEAAwAJADYAAAACAP3/AwAJADYAAAA=")
tile_set = ExtResource("2_lu0mq")

[node name="SuperiorASuperiorASuperiorNoPeces" type="TileMapLayer" parent="."]
visible = false
position = Vector2(8, 0)
tile_map_data = PackedByteArray("AAACAAkAAQAxAA4AAAACAAUAAQAxAA4AAAACAAEAAQAxAA4AAAACAP3/AQAxAA4AAAA=")
tile_set = ExtResource("2_lu0mq")

[node name="SuperiorIconoVenta" type="TileMapLayer" parent="."]
position = Vector2(-7, 0)
tile_map_data = PackedByteArray("AAADAAwAAwAPAAkAAAAEAAwAAwAPAAkAAAACAAwAAwAPAAkAAAA=")
tile_set = ExtResource("2_lu0mq")

[node name="BotonCerrar" type="Button" parent="."]
modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_left = 64.0
offset_top = -208.0
offset_right = 80.0
offset_bottom = -192.0
mouse_default_cursor_shape = 2

[node name="BotonLibro" type="Button" parent="."]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_left = -80.0
offset_top = -208.0
offset_right = -64.0
offset_bottom = -192.0
mouse_default_cursor_shape = 2

[node name="NombrePinguino" type="Label" parent="."]
layout_mode = 0
offset_left = -92.0
offset_top = -112.0
offset_right = 92.0
offset_bottom = -80.0
theme_override_fonts/font = ExtResource("3_v2mdd")
theme_override_font_sizes/font_size = 32
text = "Pingüino Real"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 0
offset_left = -77.0
offset_top = -189.0
offset_right = 76.0
offset_bottom = -130.0

[node name="PinguinoFoto" type="Sprite2D" parent="CenterContainer"]
position = Vector2(75, 29)
scale = Vector2(0.224609, 0.236328)
texture = ExtResource("6_wayin")

[node name="CantidadVidaPinguino" type="Label" parent="."]
layout_mode = 0
offset_left = -69.0
offset_top = -160.0
offset_right = -26.0
offset_bottom = -132.0
theme_override_fonts/font = ExtResource("5_j51aj")
theme_override_font_sizes/font_size = 32
text = "1"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CantidadDañoPinguino" type="Label" parent="."]
layout_mode = 0
offset_left = 20.0
offset_top = -160.0
offset_right = 70.0
offset_bottom = -132.0
theme_override_fonts/font = ExtResource("5_j51aj")
theme_override_font_sizes/font_size = 32
text = "1"
horizontal_alignment = 1
vertical_alignment = 1

[node name="BotonVender" type="Button" parent="."]
modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_left = 16.0
offset_top = 192.0
offset_right = 80.0
offset_bottom = 208.0
mouse_default_cursor_shape = 2

[node name="Mejora1" type="Label" parent="."]
layout_mode = 0
offset_left = -61.0
offset_top = -60.0
offset_right = 13.0
offset_bottom = -20.0
theme_override_colors/font_color = Color(0.890196, 0.435294, 0.121569, 1)
theme_override_fonts/font = ExtResource("3_v2mdd")
theme_override_font_sizes/font_size = 16
text = "Disparo
Multiple"
horizontal_alignment = 1
vertical_alignment = 1

[node name="BotonMejora1" type="Button" parent="Mejora1"]
modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_left = 93.0
offset_top = 12.0
offset_right = 125.0
offset_bottom = 28.0
mouse_default_cursor_shape = 2

[node name="Mejora2" type="Label" parent="."]
layout_mode = 0
offset_left = -61.0
offset_top = 4.0
offset_right = 13.0
offset_bottom = 44.0
theme_override_colors/font_color = Color(0.105882, 0.290196, 0.72549, 1)
theme_override_fonts/font = ExtResource("3_v2mdd")
theme_override_font_sizes/font_size = 16
text = "Flecha de 
Hielo"
horizontal_alignment = 1
vertical_alignment = 1

[node name="BotonMejora2" type="Button" parent="Mejora2"]
modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_left = 93.0
offset_top = 12.0
offset_right = 125.0
offset_bottom = 28.0
mouse_default_cursor_shape = 2

[node name="Mejora3" type="Label" parent="."]
layout_mode = 0
offset_left = -61.0
offset_top = 68.0
offset_right = 12.0
offset_bottom = 108.0
theme_override_colors/font_color = Color(0.274662, 0.3078, 0.374457, 1)
theme_override_fonts/font = ExtResource("5_j51aj")
theme_override_font_sizes/font_size = 16
text = "Dispersión 
de nieve"
horizontal_alignment = 1
vertical_alignment = 1

[node name="BotonMejora3" type="Button" parent="Mejora3"]
modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_left = 93.0
offset_top = 12.0
offset_right = 125.0
offset_bottom = 28.0
mouse_default_cursor_shape = 2

[node name="Mejora4" type="Label" parent="."]
layout_mode = 0
offset_left = -60.0
offset_top = 132.0
offset_right = 12.0
offset_bottom = 172.0
theme_override_colors/font_color = Color(0.105882, 0.443137, 0.72549, 1)
theme_override_fonts/font = ExtResource("3_v2mdd")
theme_override_font_sizes/font_size = 16
text = "Ráfaga
De Nieve"
horizontal_alignment = 1
vertical_alignment = 1

[node name="BotonMejora4" type="Button" parent="Mejora4"]
modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_left = 92.0
offset_top = 12.0
offset_right = 124.0
offset_bottom = 28.0
mouse_default_cursor_shape = 2

[connection signal="pressed" from="BotonCerrar" to="." method="_on_boton_cerrar_pressed"]
[connection signal="pressed" from="BotonLibro" to="." method="_on_boton_libro_pressed"]
[connection signal="pressed" from="BotonVender" to="." method="_on_boton_vender_pressed"]
[connection signal="pressed" from="Mejora1/BotonMejora1" to="." method="_on_boton_mejora_1_pressed"]
[connection signal="pressed" from="Mejora2/BotonMejora2" to="." method="_on_boton_mejora_2_pressed"]
[connection signal="pressed" from="Mejora3/BotonMejora3" to="." method="_on_boton_mejora_3_pressed"]
[connection signal="pressed" from="Mejora4/BotonMejora4" to="." method="_on_boton_mejora_4_pressed"]
